--- a/manifest.json
+++ b/manifest.json
@@ -2,26 +2,26 @@
   "name": "Filecoin Retrieval",
   "version": "0.0.1",
   "description": "A p2p network of Filecoin content retrievers",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "permissions": ["storage"],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["src/background/background.js"],
     "persistent": false
   },
-  "options_page": "options.html",
-  "page_action": {
-    "default_popup": "popup.html",
+  "options_page": "src/options/options.html",
+  "browser_action": {
+    "default_popup": "src/popup/popup.html",
     "default_icon": {
-      "16": "images/filecoin-16x16.png",
-      "32": "images/filecoin-32x32.png",
-      "48": "images/filecoin-48x48.png",
-      "128": "images/filecoin-128x128.png"
+      "16": "src/images/filecoin-16x16.png",
+      "32": "src/images/filecoin-32x32.png",
+      "48": "src/images/filecoin-48x48.png",
+      "128": "src/images/filecoin-128x128.png"
     }
   },
   "icons": {
-    "16": "images/filecoin-16x16.png",
-    "32": "images/filecoin-32x32.png",
-    "48": "images/filecoin-48x48.png",
-    "128": "images/filecoin-128x128.png"
+    "16": "src/images/filecoin-16x16.png",
+    "32": "src/images/filecoin-32x32.png",
+    "48": "src/images/filecoin-48x48.png",
+    "128": "src/images/filecoin-128x128.png"
   },
   "manifest_version": 2
 }
