--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "A p2p network of Filecoin content retrievers",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.0.0",
     "react-scripts": "3.4.1"
   },
+  "devDependencies": {
+    "autoprefixer": "^9.8.4",
+    "postcss-cli": "^7.1.1",
+    "tailwindcss": "^1.4.6"
+  },
   "scripts": {
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build"
+    "build:css": "NODE_ENV=production postcss src/styles/tailwind.css -o src/styles/tailwind.generated.css",
+    "build:js": "INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "build": "yarn build:css && yarn build:js"
   },
   "eslintConfig": {
     "extends": "react-app"
