--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,16 +1,14 @@
 {
 	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "npm",
-			"script": "build",
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"problemMatcher": [],
-			"label": "npm: build",
-			"detail": "INLINE_RUNTIME_CHUNK=false react-scripts build"
-		}
-	]
+	"tasks": [{
+		"type": "npm",
+		"script": "build",
+		"group": {
+			"kind": "build",
+			"isDefault": true
+		},
+		"problemMatcher": [],
+		"label": "npm: build",
+		"detail": "INLINE_RUNTIME_CHUNK=false react-scripts build"
+	}]
 }
