--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
   "devDependencies": {
     "@babel/cli": "^7.10.4",
     "autoprefixer": "^9.8.4",
+    "libp2p": "^0.28.3",
+    "libp2p-gossipsub": "^0.4.5",
+    "libp2p-mplex": "^0.9.5",
+    "libp2p-noise": "^1.1.2",
+    "libp2p-secio": "^0.12.5",
+    "libp2p-tcp": "^0.14.5",
+    "libp2p-webrtc-star": "^0.18.6",
+    "libp2p-websockets": "^0.13.6",
+    "peer-id": "^0.13.13",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6",
     "webpack-cli": "^3.3.12"
@@ -22,7 +31,8 @@
     "build:popup:js": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "build:popup": "yarn build:popup:css && yarn build:popup:js",
     "build:background": "webpack",
-    "build": "yarn build:popup && yarn build:background"
+    "build": "yarn build:popup && yarn build:background",
+    "bootstrap": "star-signal"
   },
   "eslintConfig": {
     "extends": "react-app"
