Add file upload and known cids

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A p2p network of Filecoin content retrievers",
   "private": true,
   "dependencies": {
+    "cids": "^0.8.3",
     "classnames": "^2.2.6",
+    "multihashing-async": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-hook-form": "^6.0.0",
     "react-scripts": "3.4.1"
   },
