--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cids": "^0.8.3",
     "classnames": "^2.2.6",
     "multihashing-async": "^1.0.0",
+    "pretty-bytes": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
