--- a/package.json
+++ b/package.json
@@ -4,30 +4,19 @@
   "description": "A p2p network of Filecoin content retrievers",
   "private": true,
   "dependencies": {
-    "cids": "^0.8.3",
+    "@babel/cli": "^7.10.4",
+    "autoprefixer": "^9.8.4",
     "classnames": "^2.2.6",
-    "multihashing-async": "^1.0.0",
-    "pretty-bytes": "^5.3.0",
+    "ipfs": "^0.47.0",
+    "it-all": "^1.0.2",
+    "it-last": "^1.0.2",
+    "libp2p-tcp": "^0.14.5",
+    "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-hook-form": "^6.0.0",
-    "react-scripts": "3.4.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "autoprefixer": "^9.8.4",
-    "it-pipe": "^1.1.0",
-    "libp2p": "^0.28.3",
-    "libp2p-gossipsub": "^0.4.5",
-    "libp2p-mplex": "^0.9.5",
-    "libp2p-noise": "^1.1.2",
-    "libp2p-secio": "^0.12.5",
-    "libp2p-tcp": "^0.14.5",
-    "libp2p-webrtc-star": "^0.18.6",
-    "libp2p-websockets": "^0.13.6",
-    "peer-id": "^0.13.13",
-    "postcss-cli": "^7.1.1",
+    "react-scripts": "3.4.1",
     "tailwindcss": "^1.4.6",
     "webpack-cli": "^3.3.12"
   },
