Add babel polyfill to final build

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": ["@babel/transform-runtime", "@babel/plugin-proposal-class-properties"]
 }
