--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/runtime": "^7.10.4",
     "autoprefixer": "^9.8.4",
+    "cids": "^0.8.3",
     "classnames": "^2.2.6",
-    "ipfs": "^0.47.0",
-    "it-all": "^1.0.2",
-    "it-last": "^1.0.2",
+    "datastore-idb": "^1.1.0",
+    "interface-datastore": "^1.0.4",
+    "it-pushable": "^1.4.0",
+    "libp2p": "^0.28.5",
+    "libp2p-gossipsub": "^0.4.6",
+    "libp2p-mplex": "^0.9.5",
+    "libp2p-noise": "^1.1.2",
+    "libp2p-secio": "^0.12.6",
     "libp2p-tcp": "^0.14.5",
+    "libp2p-webrtc-star": "^0.18.6",
+    "libp2p-websockets": "^0.13.6",
+    "multihashing-async": "^1.0.0",
+    "peer-id": "^0.13.13",
     "postcss-cli": "^7.1.1",
+    "pretty-bytes": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
