--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "build:popup:js": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "build:popup": "yarn build:popup:css && yarn build:popup:js",
     "build:background": "NODE_ENV=development webpack",
-    "build": "yarn build:popup && yarn build:background"
+    "build": "yarn build:popup && yarn build:background",
+    "build:debug": "DEBUG=true yarn build"
   },
   "eslintConfig": {
     "extends": "react-app"
