--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "@babel/runtime": "^7.10.4",
     "@zondax/filecoin-signing-tools": "^0.5.2",
     "autoprefixer": "^9.8.4",
+    "buffer": "^5.6.0",
     "cids": "^0.8.3",
     "classnames": "^2.2.6",
-    "datastore-idb": "^1.1.0",
     "interface-datastore": "^1.0.4",
+    "ipfs-block-service": "^0.17.1",
+    "ipfs-repo": "^5.0.0",
+    "ipfs-unixfs-exporter": "^2.0.2",
+    "ipfs-unixfs-importer": "^2.0.2",
+    "ipld": "^0.26.3",
+    "ipld-block": "^0.9.2",
     "ipld-dag-cbor": "^0.16.0",
+    "it-all": "^1.0.2",
+    "it-last": "^1.0.2",
     "it-pushable": "^1.4.0",
     "libp2p": "^0.28.5",
     "libp2p-gossipsub": "^0.4.6",
