--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@babel/cli": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/runtime": "^7.10.4",
-    "@zondax/filecoin-signing-tools": "^0.5.2",
+    "@zondax/filecoin-signing-tools": "^0.6.2",
     "autoprefixer": "^9.8.4",
     "buffer": "^5.6.0",
+    "cbor": "^5.0.2",
     "cids": "^0.8.3",
     "classnames": "^2.2.6",
     "interface-datastore": "^1.0.4",
