--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/runtime": "^7.10.4",
     "@zondax/filecoin-signing-tools": "^0.6.2",
     "autoprefixer": "^9.8.4",
+    "base32-encode": "^1.1.1",
     "buffer": "^5.6.0",
     "cbor": "^5.0.2",
     "cids": "^0.8.3",
