--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@babel/cli": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/runtime": "^7.10.4",
-    "@zondax/filecoin-signing-tools": "^0.6.2",
     "autoprefixer": "^9.8.4",
     "base32-decode": "^1.0.0",
     "base32-encode": "^1.1.1",
     "bignumber.js": "^9.0.0",
+    "blakejs": "^1.1.0",
     "buffer": "^5.6.0",
     "cbor": "^5.0.2",
     "cids": "^0.8.3",
@@ -35,7 +35,7 @@
     "libp2p-tcp": "^0.14.5",
     "libp2p-webrtc-star": "^0.18.6",
     "libp2p-websockets": "^0.13.6",
-    "multihashing-async": "^1.0.0",
+    "multihashing-async": "^2.0.1",
     "peer-id": "^0.13.13",
     "postcss-cli": "^7.1.1",
     "pretty-bytes": "^5.3.0",
@@ -45,6 +45,7 @@
     "react-dropzone": "^11.0.1",
     "react-hook-form": "^6.0.0",
     "react-scripts": "3.4.1",
+    "secp256k1": "^4.0.2",
     "tailwindcss": "^1.4.6",
     "wasm-loader": "^1.3.0",
     "webpack-cli": "^3.3.12"
