--- a/package.json
+++ b/package.json
@@ -40,19 +40,17 @@
     "postcss-cli": "^7.1.1",
     "pretty-bytes": "^5.3.0",
     "react": "^16.13.1",
-    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-hook-form": "^6.0.0",
     "react-scripts": "3.4.1",
     "secp256k1": "^4.0.2",
     "tailwindcss": "^1.4.6",
-    "wasm-loader": "^1.3.0",
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "build:popup:css": "NODE_ENV=production postcss src/popup/styles/tailwind.css -o src/popup/styles/tailwind.generated.css",
-    "build:popup:js": "INLINE_RUNTIME_CHUNK=false react-app-rewired build",
+    "build:popup:js": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "build:popup": "yarn build:popup:css && yarn build:popup:js",
     "build:background": "NODE_ENV=development webpack",
     "build": "yarn build:popup && yarn build:background",
