--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "it-last": "^1.0.2",
     "it-pushable": "^1.4.0",
     "libp2p": "^0.28.5",
+    "libp2p-bootstrap": "^0.12.1",
     "libp2p-gossipsub": "^0.4.6",
     "libp2p-mplex": "^0.9.5",
     "libp2p-noise": "^1.1.2",
     "libp2p-secio": "^0.12.6",
-    "libp2p-tcp": "^0.14.5",
+    "libp2p-tcp": "^0.14.6",
     "libp2p-webrtc-star": "^0.18.6",
     "libp2p-websockets": "^0.13.6",
     "multihashing-async": "^1.0.0",
