--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buffer": "^5.6.0",
     "cids": "^0.8.3",
     "classnames": "^2.2.6",
+    "html-webpack-plugin": "^4.5.0",
     "interface-datastore": "^1.0.4",
     "ipfs-block-service": "^0.17.1",
     "ipfs-repo": "^5.0.0",
@@ -32,12 +33,14 @@
     "libp2p-tcp": "^0.14.6",
     "libp2p-webrtc-star": "^0.18.6",
     "libp2p-websockets": "^0.13.6",
+    "lodash": "^4.17.15",
     "multihashing-async": "^1.0.0",
     "peer-id": "^0.13.13",
     "postcss-cli": "^7.1.1",
     "pretty-bytes": "^5.3.0",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
+    "react-app-rewire-multiple-entry": "^2.1.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-hook-form": "^6.0.0",
