--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "postcss-cli": "^7.1.1",
     "pretty-bytes": "^5.3.0",
     "react": "^16.13.1",
-    "react-app-rewired": "^2.1.6",
     "react-app-rewire-multiple-entry": "^2.1.0",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-hook-form": "^6.0.0",
     "react-scripts": "3.4.1",
+    "socket.io-client": "^2.3.1",
     "tailwindcss": "^1.4.6",
     "wasm-loader": "^1.3.0",
     "webpack-cli": "^3.3.12"
@@ -53,7 +54,13 @@
     "build:popup": "yarn build:popup:css && yarn build:popup:js",
     "build:background": "NODE_ENV=development webpack",
     "build": "yarn build:popup && yarn build:background",
-    "build:debug": "DEBUG=true yarn build"
+    "build:debug": "DEBUG=true yarn build",
+
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "build:popup:js": "src/{popup,shared}/**/*.js",
+    "build:background": "src/{background,shared}/**/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
