--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "wasm-loader": "^1.3.0",
     "webpack-cli": "^3.3.12"
   },
+  "devDependencies": {
+    "npm-watch": "^0.7.0"
+  },
   "scripts": {
     "build:popup:css": "NODE_ENV=production postcss src/popup/styles/tailwind.css -o src/popup/styles/tailwind.generated.css",
     "build:popup:js": "INLINE_RUNTIME_CHUNK=false react-app-rewired build",
