--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dropzone": "^11.0.1",
     "react-hook-form": "^6.0.0",
     "react-scripts": "3.4.1",
+    "react-use-localstorage": "^3.5.3",
     "socket.io-client": "^2.3.1",
     "tailwindcss": "^1.4.6",
     "wasm-loader": "^1.3.0",
