--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "libp2p-webrtc-star": "^0.18.6",
     "libp2p-websockets": "^0.13.6",
     "lodash": "^4.17.15",
+    "luxon": "^1.25.0",
     "multihashing-async": "^1.0.0",
     "peer-id": "^0.13.13",
     "postcss-cli": "^7.1.1",
@@ -82,9 +83,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.2",
-    "npm-watch": "^0.7.0"
   }
 }
