Fixed sendFunds; default to prod

--- a/.env-sample
+++ b/.env-sample
@@ -1,5 +1,5 @@
 # PROD
-# REACT_APP_PROXY_SERVER="ws://***"
+REACT_APP_PROXY_SERVER="wss://retrievalproxy.browser-retrieval.filecoin.io:443"
 
 # DEV
-REACT_APP_PROXY_SERVER="ws://localhost:3000"
+#REACT_APP_PROXY_SERVER="ws://localhost:3000"
