#114 Download failed: Key not found in database

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.20.0",
     "browser-util-inspect": "^0.2.0",
     "buffer": "^5.6.0",
-    "cids": "^0.8.3",
+    "cids": "^1.0.2",
     "classnames": "^2.2.6",
     "interface-datastore": "^1.0.4",
     "ipfs-block-service": "^0.17.1",
@@ -36,6 +36,9 @@
     "lodash": "^4.17.15",
     "luxon": "^1.25.0",
     "multihashing-async": "^1.0.0",
+    "multibase": "^3.0.1",
+    "multicodec": "^2.0.1",
+    "multihashes": "^3.0.1",
     "peer-id": "^0.13.13",
     "postcss-cli": "^7.1.1",
     "pretty-bytes": "^5.3.0",
