--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,8 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/transform-runtime", "@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/transform-runtime",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-optional-chaining"
+  ]
 }
