--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,8 @@
 # e2e
 EXTENSION_PATH=/usr/src/extension/build
+
+LOTUS_WALLET_1=""
+LOTUS_WALLET_PRIVATE_1=""
+
+LOTUS_WALLET_2=""
+LOTUS_WALLET_PRIVATE_2=""
