--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "file-replace-loader": "^1.3.1",
-    "jest": "^26.6.3",
+    "jest": "26.6.0",
     "npm-watch": "^0.7.0",
     "puppeteer": "^5.5.0",
     "typescript": "^4.0.5"
