Add bignumber, check wallet balance before sending FIL to proxy server to retrieve a cid from storage miners

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@zondax/filecoin-signing-tools": "^0.12.0",
     "autoprefixer": "^9.8.4",
     "axios": "^0.21.0",
+    "bignumber.js": "^9.0.1",
     "browser-util-inspect": "^0.2.0",
     "buffer": "^6.0.2",
     "cids": "^1.0.2",
