Update env sample

--- a/.env-sample
+++ b/.env-sample
@@ -1,1 +1,19 @@
-# See src/shared/environments/env.js
+# React
+REACT_APP_RENDEZVOUS_IP="webrtc-star-1.browser-retrieval.filecoin.io"
+REACT_APP_RENDEZVOUS_PORT=443
+REACT_APP_WS_ENDPOINT="wss://retrievalproxy.browser-retrieval.filecoin.io:443"
+REACT_APP_LOTUS_ENDPOINT="http://3.231.219.184:80/rpc/v0"
+REACT_APP_LOTUS_TOKEN=""
+REACT_APP_PAYMENT_INTERVAL=1048576
+REACT_APP_PAYMENT_INTERVAL_INCREASE=1048576
+REACT_APP_WALLET_PLACEHOLDER="f156e3l2vwd5wi5jwdrd6gdg4y7t2yknq6see7xbq"
+REACT_APP_PRIVATE_KEY_PLACEHOLDER="ciiFbmF7F7mrVs5E/IT8TV63PdFPLrRs9R/Cc3vri2I="
+
+# e2e
+EXTENSION_PATH=""
+
+LOTUS_WALLET_1=""
+LOTUS_WALLET_PRIVATE_1=""
+
+LOTUS_WALLET_2=""
+LOTUS_WALLET_PRIVATE_2=""
