Add gas estimator

--- a/.env-sample
+++ b/.env-sample
@@ -2,7 +2,8 @@
 REACT_APP_RENDEZVOUS_IP="webrtc-star-1.browser-retrieval.filecoin.io"
 REACT_APP_RENDEZVOUS_PORT=443
 REACT_APP_WS_ENDPOINT="wss://retrievalproxy.browser-retrieval.filecoin.io:443"
-REACT_APP_LOTUS_ENDPOINT="http://3.231.219.184:80/rpc/v0"
+REACT_APP_LOTUS_ENDPOINT="https://cloud-lotus-1.browser-retrieval.filecoin.io/rpc/v0"
+# REACT_APP_LOTUS_ENDPOINT="http://3.231.219.184:80/rpc/v0"
 REACT_APP_LOTUS_TOKEN=""
 REACT_APP_PAYMENT_INTERVAL=1048576
 REACT_APP_PAYMENT_INTERVAL_INCREASE=1048576
