--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@babel/cli": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/runtime": "^7.12.5",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
@@ -69,22 +69,24 @@
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@types/luxon": "^1.25.0",
+    "@types/puppeteer": "^5.4.2",
     "awesome-typescript-loader": "^5.2.1",
     "base64-loader": "^1.0.0",
     "cross-env": "^7.0.2",
     "file-replace-loader": "^1.3.1",
+    "jest": "26.6.0",
+    "jest-environment-node": "^26.6.2",
     "npm-watch": "^0.7.0",
+    "puppeteer": "^5.5.0",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
-  },
-  "watch": {
-    "build": "src/{popup,background,shared}/**/*.js",
-    "build:local": "src/{popup,background,shared}/**/*.js",
-    "build:js:local": "src/{background,popup,shared}/**/*.js"
+    "test": "react-app-rewired test",
+    "e2e": "jest"
   },
   "eslintConfig": {
     "extends": [
