--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          eval "$(ssh-agent -s)"
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-add - <<< "${DEPLOY_PRIVATE_KEY}"
           ssh ubuntu@34.232.70.238 ls
