--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          mkdir -p ~/.ssh
           eval "$(ssh-agent -s)"
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           ssh-add - <<< "${secrets.DEPLOY_PRIVATE_KEY}"
