--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
           mkdir -p ~/.ssh
           eval "$(ssh-agent -s)"
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          ssh-add - <<< "${secrets.DEPLOY_PRIVATE_KEY}"
+          ssh-add - <<< "${{ secrets.DEPLOY_PRIVATE_KEY }}"
           ssh ubuntu@34.232.70.238 ls
