--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,23 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Start
         run: echo Deploying app to 34.232.70.238
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Setup SSH
         env:
-          GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
-          eval "$(ssh-agent -s)"
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
           ssh-add - <<< "${{ secrets.DEPLOY_PRIVATE_KEY }}"
+          
+      # Runs after ssh setup
+      - name: Deploy
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
           ssh ubuntu@34.232.70.238 ls
+          
